UI: missing update after changing the symmetry axis #118137

Closed
opened 2024-02-12 14:41:04 +01:00 by walt · 5 comments

System Information
Operating system: Windows-10-10.0.22631-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: (newest version of Blender that worked as expected)

Short description of error
Symmetry settings in the 3dviewport/orToolbox are not automatically synchronised in the Toolbox/-3dviewport

Exact steps for others to reproduce the error

  • Open default scene
  • Enter edit mode
  • Properties editor -> Tools
  • Select symmetry axis in editor (selected axis is not updating in toolbar)

See video

**System Information** Operating system: Windows-10-10.0.22631-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: (newest version of Blender that worked as expected) **Short description of error** Symmetry settings in the 3dviewport/orToolbox are not automatically synchronised in the Toolbox/-3dviewport **Exact steps for others to reproduce the error** - Open default scene - Enter edit mode - `Properties editor -> Tools` - Select symmetry axis in editor (selected axis is not updating in toolbar) See video
walt added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2024-02-12 14:41:05 +01:00
Iliya Katushenock added the
Interest
User Interface
label 2024-02-12 16:14:49 +01:00
Member

Hi, thanks for the report. Can confirm. Looks like a missing notifier for redrawing the toolbar (and for editor panel).

Tagging with good first issue

Hi, thanks for the report. Can confirm. Looks like a missing notifier for redrawing the toolbar (and for editor panel). Tagging with `good first issue`
Pratik Borhade changed title from UpdateProblem Toolbox-Viewport to UI: missing toolbar update after changing the symmetry axis 2024-02-13 09:57:12 +01:00
Pratik Borhade changed title from UI: missing toolbar update after changing the symmetry axis to UI: missing update after changing the symmetry axis 2024-02-13 09:58:08 +01:00
Contributor

I'm gonna take this one if you guys don't mind ;)

I'm gonna take this one if you guys don't mind ;)
Member

Yes, feel free to work on this :)

Yes, feel free to work on this :)
Contributor

Hi, thanks for the report. Can confirm. Looks like a missing notifier for redrawing the toolbar (and for editor panel).

Tagging with good first issue

Hi , I have noticed the buttons in the toolbar have a different identifier than the buttons on the side panel :
image

image

modifying

sub.prop(context.active_object, "use_mesh_mirror_x", text="X", toggle=True)
sub.prop(context.active_object, "use_mesh_mirror_y", text="Y", toggle=True)
sub.prop(context.active_object, "use_mesh_mirror_z", text="Z", toggle=True)

to use_mirror_{xyz} "fixes" the problem... but I don't understand two identifiers for buttons that seem to do the same thing ?
unless they don't ?

> Hi, thanks for the report. Can confirm. Looks like a missing notifier for redrawing the toolbar (and for editor panel). > > Tagging with `good first issue` Hi , I have noticed the buttons in the toolbar have a different identifier than the buttons on the side panel : ![image](/attachments/d4da104a-abcd-45f2-b426-96c1daf1a0dd) ![image](/attachments/e405b707-9699-4193-8c2a-25d8c1d5ae29) modifying ``` sub.prop(context.active_object, "use_mesh_mirror_x", text="X", toggle=True) sub.prop(context.active_object, "use_mesh_mirror_y", text="Y", toggle=True) sub.prop(context.active_object, "use_mesh_mirror_z", text="Z", toggle=True) ``` to `use_mirror_{xyz}` "fixes" the problem... but I don't understand two identifiers for buttons that seem to do the same thing ? unless they don't ?
Member
I see. But in the end `use_mesh_mirror_x` sets the flag which is defined with property `use_mirror_x` see: - https://projects.blender.org/blender/blender/src/branch/main/source/blender/makesrna/intern/rna_object.cc#L3785-L3787 - https://projects.blender.org/blender/blender/src/branch/main/source/blender/makesrna/intern/rna_object.cc#L2244 - - - - https://projects.blender.org/blender/blender/src/branch/main/source/blender/makesrna/intern/rna_mesh.cc#L3211
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-19 18:49:52 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118137
No description provided.