Fix #118137: Toolbar symmetry buttons not updated on click.

Axis symmetry buttons on the toolbar didn't update their state when
their equivalent buttons on other areas were clicked.